examples/non-examples/type-errors/not-a-function.kl
#lang kernel

(example (42 23))
